# bioagents

./: .dockerignore  .env.example  Dockerfile  README.md  bio_policies_explained.md  pyproject.toml
bioagents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bioagents/agents/: __init__.py  bug.py  critic.py  performance.py  solution.py  strategy.py
bioagents/agents/code_analysis/: __init__.py  bug_detector.py  performance_analyzer.py
bioagents/agents/evaluation/: __init__.py  critic_evaluator.py
bioagents/agents/reasoning/: __init__.py  solution_generator.py  strategy_planner.py
bioagents/cli/: main.py
bioagents/core/: agent.py  blackboard.py  cluster.py  config.py  models.py  normalize.py  registry.py  rules.py  runtime.py  selector.py  skills.py  task.py
bioagents/datasources/: __init__.py  base.py  file.py  github_pr.py  registry.py  text.py
bioagents/llm/: __init__.py  prompts.py  provider.py
bioagents/policies/: __init__.py  ant.py  base.py  bee.py  default.py  immune.py
bioagents/registry/: __init__.py  agents.py  policies.py  tasks.py
demos/: document_task.json  sample_task.json
docs/: index.html
tests/: test_blackboard.py  test_config.py  test_datasources.py  test_provider.py  test_rules.py  test_runtime.py  test_selector.py  test_skills.py  test_task.py
