[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioagents"
version = "0.1.0"
description = "Minimal swarm runtime skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.12,<1.0"]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
bioagents = "bioagents.cli.main:main"

[tool.setuptools]
packages = ["bioagents", "bioagents.cli", "bioagents.core", "bioagents.llm", "bioagents.agents", "bioagents.registry", "bioagents.policies"]

[tool.pytest.ini_options]
testpaths = ["tests"]
